# modules/api/controllers/PostController.php
@@ -6,6 +6,7 @@ use Yii;
 use yii\rest\ActiveController;
 use yii\filters\auth\HttpBearerAuth;
 use yii\web\Response;
+use app\models\Post;
 
 /**
  * Post controller for the `api` module
@@ -48,6 +49,23 @@ class PostController extends ActiveController
  *       @OA\Response(response="200", description="Posts list"),        
  *       @OA\Response(response=401, description="Unauthorized"),
  *       @OA\Response(response=404, description="Not Found"),
+ * )
+ * 
+ * @OA\POST(path="/v1/posts", tags={"Post"},
+ *      @OA\RequestBody(
+ *          @OA\MediaType(
+ *              mediaType="application/json",
+ *              @OA\Schema(
+ *                  required={"title", "content"},
+ *                  @OA\Property(property="title", type="string"),
+ *                  @OA\Property(property="content", type="string")
+ *              )
+ *          )
+ *      ),
+ * 
+ * security={{"bearerAuth":{}}},
+ * @OA\Response(response=201, description="Successful operation"),
+ * @OA\Response(response=422, description="Unprocessable Entity")
  * )
  * 
  * @OA\PUT(path="/v1/posts/{id}", tags={"Post"},
@@ -113,6 +131,33 @@ class PostController extends ActiveController
         $behaviors['contentNegotiator']['formats']['text/html'] = Response::FORMAT_JSON;
 
         return $behaviors;
+    }
+
+    public function actions()
+    {
+        $actions = parent::actions();
+
+        // отключить действие "create"
+        unset($actions['create']);
+
+        return $actions;
+    }
+
+    public function actionCreate()
+    {        
+            $model = new Post(['scenario' => Post::SCENARIO_POST_CREATE]);
+            
+            // IF model load and model save
+            if( $model->load(Yii::$app->getRequest()->getBodyParams(), '') && $model->save()){
+
+                Yii::$app->response->statusCode = 201;
+                return $model;
+                
+            }else{
+                Yii::$app->response->statusCode = 422;
+                return $model->getErrors();
+            }
+            
     }
 
 }
